--- a/hacktheice/main/templates/main/index.html
+++ b/hacktheice/main/templates/main/index.html
@@ -7,8 +7,11 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Главная страница</h1>
-    <a href="/register/profile/">Авторизация</a>
-    <a href="/shops/seeporduscts/">продукты в магазинах</a>
+    <div class="header_inner">
+        <h1>Главная страница</h1>
+        <a href="/register/profile/" class="nav_link">Авторизация</a>
+        <a href="/shops/seeporduscts/" class="nav_link">продукты в магазинах</a>
+        <a href="/shops/basket/" class="nav_link">корзина</a>
+    </div>
 </body>
 </html>
