--- a/hacktheice/main/templates/main/writenews.html
+++ b/hacktheice/main/templates/main/writenews.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>only for sellers</h1>
+    <h1>only for sellers, for making news</h1>
     <form method="post">
         {% csrf_token %}
         {{ form }}
